# ail-builder

./: .gitignore  AIL_PROFILE_BOUNDARIES.md  APP_MIN_STRATEGY_REVIEW_20260319.md  BRAND_DISTINCTION_COMPANY_SLICE_EVALUATION_20260409.md  BRAND_DISTINCTION_IMPLEMENTATION_PLAN_20260409.md  BRAND_DISTINCTION_PERSONAL_SLICE_EVALUATION_20260409.md  BRAND_DISTINCTION_PHASE_REVIEW_20260409.md  BRAND_DISTINCTION_PHASE_REVIEW_20260416.md  BRAND_DISTINCTION_PHASE_REVIEW_20260417.md  BRAND_DISTINCTION_REVIEW_20260409.md  CHANGELOG.md  COMMERCIAL_LICENSE.md  CONTEXT_COMPRESSION_SPEC_20260428.md  CONTEXT_METRICS_REPORT_20260428.md  CONTEXT_PATCH_POLICY_TEMPLATE_20260429.md  CONTEXT_REPO_SCALE_PERFORMANCE_REPORT_20260429.md  CONTEXT_TEST_MATRIX_20260428.md  CONTEXT_TEST_REPORT_20260428.md  CONTEXT_TOKENIZER_REPO_SCALE_REPORT_20260429.md  CROSS_WORKFLOW_MAP_20260429.md  CUSTOMIZATION_UX_OPERATOR_CHEAT_SHEET_20260406.md  CUSTOMIZATION_UX_PHASE_CLOSEOUT_20260409.md  DESIGN_HANDOFF_SPEC_20260426.md  ECOM_COMPONENT_ROADMAP_20260425.md  FIRST_USER_TRIAL_OPERATOR_GUIDE.md  FIRST_USER_TRIAL_PLAN.md  FROZEN_PROFILE_COVERAGE_FIX_PLAN_20260317.md  FROZEN_PROFILE_COVERAGE_PROGRESS_20260317.md  FROZEN_PROFILE_EXAMPLES_V1.md  IDE_ACTION_MAPPING_V1_20260319.md  IDE_CONSUMPTION_PLAN_20260319.md  IDE_PANEL_CONTRACT_V1_20260319.md  IDE_PANEL_STATE_MODEL_V1_20260319.md  KNOWN_LIMITATIONS.md  LICENSE  MANAGED_UNMANAGED_MILESTONE_20260403.md  MANAGED_UNMANAGED_PHASE1_20260331.md  MANAGED_UNMANAGED_PHASE2_COMPONENT_HOOKS_20260331.md  MANAGED_UNMANAGED_PHASE3_HOOK_CATALOG_20260402.md  (+70 more)
benchmark/: README.md  (+6 more)
(+259 files in other folders)
